force-app/main/default/objects/Conduit_Migration_Run__c/Conduit_Migration_Run__c.object-meta.xml
<CustomObject>
    <label>Conduit Migration Run</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Migration Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conduit Migration Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>