force-app/main/default/objects/Conduit_Migration_Run__c/fields/Assessment_Request__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Request__c</fullName>
    <label>Assessment Request</label>
    <referenceTo>GTM_Assessment_Request__c</referenceTo>
    <relationshipLabel>Conduit Migration Runs</relationshipLabel>
    <relationshipName>Conduit_Migration_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>