force-app/main/default/objects/Conduit_Migration_Run__c/fields/CMM_Version__c.field-meta.xml
<CustomField>
    <fullName>CMM_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMM Version</label>
    <referenceTo>Conduit_CMM__c</referenceTo>
    <relationshipLabel>Migration Runs</relationshipLabel>
    <relationshipName>Migration_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>