force-app/main/default/objects/Conduit_Migration_Run__c/fields/Rollback_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollback Enabled</label>
    <type>Checkbox</type>
</CustomField>