force-app/main/default/objects/Conduit_Migration_Run__c/fields/Skip_Summary__c.field-meta.xml
<CustomField>
    <fullName>Skip_Summary__c</fullName>
    <label>Skip Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>