force-app/main/default/objects/Conduit_Migration_Run__c/fields/Started_By__c.field-meta.xml
<CustomField>
    <fullName>Started_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Conduit Migration Runs (Started By)</relationshipLabel>
    <relationshipName>Conduit_Migration_Runs_Started</relationshipName>
    <type>Lookup</type>
</CustomField>