force-app/main/default/objects/Conduit_Migration_Run__c/fields/Steps_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Steps_Skipped__c</fullName>
    <label>Steps Skipped</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>