force-app/main/default/objects/Conduit_Migration_Run__c/fields/Target_Config__c.field-meta.xml
<CustomField>
    <fullName>Target_Config__c</fullName>
    <label>Target Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>